/*
Copyright 2020 The Knative Authors

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package metrics;

message CustomStatValue {
  string stat_name = 1;
  double stat_value = 2;
}

message CustomStat {
  string pod_name = 1;
  int64 timestamp = 2;
  // Process uptime in seconds.
  double process_uptime = 3;

  repeated CustomStatValue values = 4;
}

message CustomWireMessage {
  string namespace = 1;
  string name = 2;
  CustomStat stat = 3;
}

message CustomWireMessages {
  repeated CustomWireMessage messages = 1;
}
